--- a/styles/travel.css
+++ b/styles/travel.css
@@ -92,7 +92,7 @@ select:hover {
     margin-bottom: 30px;
     border: 1px solid salmon;
     gap: 10px;
-    
+
 }
 
 .popular-content {
@@ -110,18 +110,110 @@ select:hover {
 }
 
 /* destination styles */
-.destination-title{
+.destination {}
+
+.destination-title {
     text-align: center;
 }
-.destination-content{
+
+.destination-content {
     text-align: center;
 }
-.row{
+
+.row {
     display: flex;
     gap: 5px;
+    height: 400px;
+    margin-bottom: 8px;
 }
 
+/* choose section styles */
+.choose {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
 
+.choose1 {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    padding: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+.choose1:nth-child(3) {
+    grid-column: 1/ span 2;
+}
+
+.hotel {
+    color: #FF900E;
+    font-size: 50px;
+}
+
+/* newsletter section styles */
+.newsletter {
+    display: flex;
+    gap: 20px;
+    width: 100%;
+    margin-top: 40px;
+}
+.newsletter-content{
+    width: 550px;
+    height: 700px;
+    border: 2px solid #FF5400;
+}
+
+.newsletter input {
+    width: 500px;
+    height: 52px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+.newsletter img{
+    width: 700px;
+    height: 700px
+}
+.primary-btn {
+    width: 500px;
+}
+
+.discount {
+    width: 324px;
+    height: 120px;
+    transform: rotate(-35deg) translate(400px);
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #FF5400;
+}
+
+.discount-title {
+    color: #FFF;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 24px;
+    padding-top: 20px;
+    padding-bottom: 0;
+    font-weight: 400;
+
+}
+
+.discount-offer {
+    color: #FFF;
+    font-family: Mulish;
+    font-size: 32px;
+    font-weight: 800;
+    padding-left: 40px;
+    padding-bottom: 40px;
+
+}
+
+/* Footer section styles */
 
 
 /*For Small Device or Mobile Device  */
@@ -185,6 +277,11 @@ select:hover {
         /* align-items: center; */
         margin-bottom: 30px;
         margin-top: 30px;
+    }
+
+    .destination img {
+        width: 100%;
+        height: 100%;
     }
 
 
